--- a/frontEnd/interface/upload.html
+++ b/frontEnd/interface/upload.html
@@ -1,99 +1,64 @@
 <!DOCTYPE html>
 <html lang="vi">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phân loại động vật</title>
+    <title>Nhận diện động vật</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
-
 <body>
-    <h1>Phân loại động vật</h1>
+    <header class="main-header">
+        <div class="logo">
+            <img src="/frontEnd/image/logo.png" alt="Logo">
+        </div>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="./">Trang chủ</a></li>
+                <li><a href="./about.html">Giới thiệu</a></li>
+                <li><a href="./contact.html">Liên hệ</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <!-- Form để upload hình ảnh -->
-    <form id="imageForm">
-        <input type="file" id="imageInput" accept="image/*" />
-        <button type="button" id="submitButton">Gửi hình ảnh</button>
-    </form>
+    <main class="main-content">
+        <!-- Cột bên trái: Khu vực tải ảnh -->
+        <section class="left-panel">
+            <h1 class="main-title">Tải lên hình ảnh</h1>
+            <p class="description">Chọn một hình ảnh để phân loại.</p>
+            
+            <form id="imageForm" class="upload-form">
+                <label for="imageInput" class="file-label">Chọn hình ảnh</label>
+                <input type="file" id="imageInput" class="file-input" accept="image/*">
+                <button type="button" id="submitButton" class="submit-button">Phân loại</button>
+            </form>
 
-    <!-- Hiển thị hình ảnh đã chọn -->
-    <div id="imagePreview" style="display: none;">
-        <h3>Hình ảnh đã chọn:</h3>
-        <img id="selectedImage" src="" alt="Hình ảnh đã chọn" width="200" />
-    </div>
+            <div id="imagePreview" class="preview" style="display: none;">
+                <h3>Hình ảnh đã chọn:</h3>
+                <img id="selectedImage" src="" alt="Hình ảnh đã chọn">
+            </div>
+        </section>
 
-    <!-- Hiển thị trạng thái loading -->
-    <div id="loading" style="display: none;">
-        <p>Đang xử lý, vui lòng đợi...</p>
-    </div>
+        <!-- Cột bên phải: Hiển thị kết quả -->
+        <section class="right-panel">
+            <h1 class="main-title">Kết quả phân loại</h1>
+            <div id="loading" class="loading" style="display: none;">
+                <p>Đang xử lý...</p>
+            </div>
 
-    <script>
-        // Xử lý khi người dùng chọn ảnh và gửi yêu cầu
-        document.getElementById('imageInput').addEventListener('change', function(event) {
-            const imageInput = document.getElementById('imageInput');
-            const file = imageInput.files[0];
+            <div id="animalInfo" class="animal-info" style="display: none;">
+                <h3>Thông tin chi tiết:</h3>
+                <p><strong>Tên (Tiếng Anh):</strong> <span id="animalNameEng"></span></p>
+                <p><strong>Tên (Tiếng Việt):</strong> <span id="animalNameVie"></span></p>
+                <p><strong>Mô tả:</strong> <span id="animalDescription"></span></p>
+                <p><strong>Độ tin cậy:</strong> <span id="animalConfidence"></span>%</p>
+            </div>
+        </section>
+    </main>
 
-            if (file) {
-                // Hiển thị hình ảnh đã chọn
-                const reader = new FileReader();
-                reader.onload = function(e) {
-                    document.getElementById('selectedImage').src = e.target.result;
-                    document.getElementById('imagePreview').style.display = 'block'; // Hiển thị phần hình ảnh
-                };
-                reader.readAsDataURL(file);
-            }
-        });
+    <footer class="main-footer">
+        <p>&copy; 2024 Hệ thống phân loại động vật. Mọi quyền được bảo lưu.</p>
+    </footer>
 
-        document.getElementById('submitButton').addEventListener('click', async function (event) {
-            // Ngừng hành động mặc định của form
-            event.preventDefault();
-
-            const imageInput = document.getElementById('imageInput');
-            const file = imageInput.files[0];
-            if (!file) {
-                alert("Vui lòng chọn một hình ảnh!");
-                return;
-            }
-
-            // Kiểm tra xem có đang loading không, nếu có thì không làm gì
-            if (document.getElementById('loading').style.display === 'block') {
-                return; // Không gửi yêu cầu nếu đang trong trạng thái loading
-            }
-
-            // Ẩn kết quả cũ và hiển thị trạng thái loading khi bắt đầu gửi yêu cầu
-            document.getElementById('loading').style.display = 'block';  // Hiển thị trạng thái loading
-
-            const formData = new FormData();
-            formData.append("file", file);
-
-            try {
-                // Gửi yêu cầu POST đến API Flask
-                const response = await fetch("http://127.0.0.1:5000/predict", {
-                    method: "POST",
-                    body: formData,
-                });
-
-                if (!response.ok) {
-                    const errorData = await response.json();
-                    console.error("Error response:", errorData);  // In ra chi tiết lỗi
-                    throw new Error("Không thể nhận kết quả từ API!");
-                }
-
-                // Nhận kết quả từ API
-                const data = await response.json();
-                
-                // Hiển thị kết quả bằng alert
-                alert(`Lớp dự đoán: ${data.predicted_class}\nĐộ tin cậy: ${data.confidence.toFixed(2)}%`);
-
-                // Ẩn trạng thái loading
-                document.getElementById('loading').style.display = 'none';
-            } catch (error) {
-                console.error('Lỗi khi gửi yêu cầu:', error);
-                alert("Đã có lỗi xảy ra khi gửi yêu cầu.");
-                document.getElementById('loading').style.display = 'none';  // Ẩn trạng thái loading nếu có lỗi
-            }
-        });
-    </script>
+    <script src="../js/upload.js"></script>
 </body>
-
 </html>
