--- a/frontEnd/interface/mainPage.html
+++ b/frontEnd/interface/mainPage.html
@@ -11,6 +11,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body>
+		<!-- navbar -->
 		<div id="header">
 			<div id="logo"></div>
 			<div id="logo-2"></div>
@@ -22,12 +23,15 @@
 				<li><a id="page_contact"  href="./">Contact</a></li>
 			</ul>
 		</div>
+
+		<!-- loading frame -->
 		<div id="loading-frame">
 			<span id="loading-text">Initializing</span>
 			<div id="loading-bar-frame">
 				<div id="loading-bar"></div>
 			</div>
 		</div>
+
 		<!-- <div id="vr_explorer" style="display: none;"></div> -->
 		<div id="quizbar">
 			<div>
@@ -41,6 +45,7 @@
 				<span id="numcorrect"></span>
 			</div>
 		</div>
+
 		<div id="sidebar">
 			<div id="toolbar">
 				<div id="bone-info">
@@ -84,6 +89,7 @@
 			</div>
 		</div>
 
+	
 		<div id="home" class="page">
 			<div id="home-title">
 				<h4>Lập trình python</h4>
@@ -98,7 +104,7 @@
 
 		<!-- center button -->
 		<div class="center-button-wrapper">
-			<a href="/frontEnd/interface/mainPage.html" class="start-button">Start</a>
+			<a href="/frontEnd/interface/upload.html" class="start-button">Start</a>
 		</div>
 
 		<div id="modal">
