--- a/frontEnd/interface/upload.html
+++ b/frontEnd/interface/upload.html
@@ -1,50 +1,83 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="./">
     <title>Nhận diện động vật</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./img/logo.png">
+    <link type="text/css" rel="stylesheet" href="/frontEnd/css/mainPage.css">
+    <link type="text/css" rel="stylesheet" href="/frontEnd/css/style.css">
 </head>
 <body>
-    <header class="main-header">
-        <div class="logo">
-            <img src="/frontEnd/image/logo.png" alt="Logo">
+    <!-- Navbar -->
+    <div id="header">
+        <div id="logo"></div>
+        <div id="logo-2"></div>
+        <ul>
+            <li><a id="page_about" href="./">About</a></li>
+            <li>|</li>
+            <li><a id="page_home" href="/frontEnd/interface/mainPage.html">Home</a></li>
+            <li>|</li>
+            <li><a id="page_contact" href="./">Contact</a></li>
+        </ul>
+    </div>
+
+    <!-- Loading Frame -->
+    <div id="loading-frame">
+        <span id="loading-text">Initializing</span>
+        <div id="loading-bar-frame">
+            <div id="loading-bar"></div>
         </div>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="./">Trang chủ</a></li>
-                <li><a href="./about.html">Giới thiệu</a></li>
-                <li><a href="./contact.html">Liên hệ</a></li>
-            </ul>
-        </nav>
-    </header>
+    </div>
 
-    <main class="main-content">
-        <!-- Cột bên trái: Khu vực tải ảnh -->
-        <section class="left-panel">
-            <h1 class="main-title">Tải lên hình ảnh</h1>
-            <p class="description">Chọn một hình ảnh để phân loại.</p>
-            
-            <form id="imageForm" class="upload-form">
-                <label for="imageInput" class="file-label">Chọn hình ảnh</label>
-                <input type="file" id="imageInput" class="file-input" accept="image/*">
-                <button type="button" id="submitButton" class="submit-button">Phân loại</button>
-            </form>
-
-            <div id="imagePreview" class="preview" style="display: none;">
-                <h3>Hình ảnh đã chọn:</h3>
-                <img id="selectedImage" src="" alt="Hình ảnh đã chọn">
+    <!-- Sidebar -->
+    <div id="sidebar">
+        <div id="toolbar">
+            <div id="bone-info">
+                <h6 id="selected-info">Browsing</h6>
+                <h6 id="selected"><b>No Bone Selected</b></h6>
             </div>
-        </section>
+            <div style="width:100%;direction: rtl;">
+                <button id="focus-toggle" class="sidebar-button half-width">Focus</button>
+                <button id="hide-toggle" class="sidebar-button half-width">Hide</button>
+            </div>
+            <div style="width:100%;direction: rtl;">
+                <button id="deselect" class="sidebar-button half-width">Deselect</button>
+                <button id="show-all" class="sidebar-button half-width">Show All</button>
+            </div>
+            <a href="./" class="sidebar-button" id="new-model-link">Reselect Model</a>
+        </div>
+    </div>
 
-        <!-- Cột bên phải: Hiển thị kết quả -->
-        <section class="right-panel">
-            <h1 class="main-title">Kết quả phân loại</h1>
+    <!-- Main Content -->
+    <div class="main-content">
+        <!-- Form Upload -->
+        <div class="left-panel">
+            <h2 class="main-title">Tải lên hình ảnh</h2>
+            <p class="description">Chọn một hình ảnh để phân loại.</p>
+            <div class="button-row">
+                <label class="file-label">
+                    Chọn hình ảnh
+                    <input type="file" id="file-upload" class="file-input" accept="image/*" style="display: none;">
+                </label>
+                <button class="submit-button" id="classify-button" disabled>Phân loại</button>
+            </div>
+            
+
+            <!-- Hiển thị ảnh đã tải lên -->
+            <div id="uploaded-image" class="image-preview" style="display: none;">
+                <p>Hình ảnh đã chọn:</p>
+                <img id="preview-image" src="#" alt="Hình ảnh tải lên">
+            </div>            
+        </div>
+
+        <!-- Form Kết Quả -->
+        <div class="right-panel">
+            <h2 class="main-title">Kết quả phân loại</h2>
             <div id="loading" class="loading" style="display: none;">
                 <p>Đang xử lý...</p>
             </div>
-
             <div id="animalInfo" class="animal-info" style="display: none;">
                 <h3>Thông tin chi tiết:</h3>
                 <p><strong>Tên (Tiếng Anh):</strong> <span id="animalNameEng"></span></p>
@@ -52,13 +85,35 @@
                 <p><strong>Mô tả:</strong> <span id="animalDescription"></span></p>
                 <p><strong>Độ tin cậy:</strong> <span id="animalConfidence"></span>%</p>
             </div>
-        </section>
-    </main>
+        </div>
+    </div>
 
-    <footer class="main-footer">
-        <p>&copy; 2024 Hệ thống phân loại động vật. Mọi quyền được bảo lưu.</p>
-    </footer>
+    <!-- About -->
+    <div id="about" class="page" style="display: none;">
+        <img id="about-people" src="./img/about-people.png"></img>
+        <img id="about-people-2" src="./img/VA-MD-seal-color-print.png"></img>
+        <img id="about-people-3" src="./img/aries-icon.png"></img>
+        <div id="about-box">
+            <div class="bordered-title">About Our Team</div>
+            <div class="bordered-text">The Veterinary Anatomy Viewer is a VR anatomy learning experience for canine, equine, and bovine models. It has been developed by the ARIES Team at the Virginia Tech Library, led by Dr. Todd Ogle. Contributions have been made by Lucas Freeman, Zac Kim, Karina Springer, Sam Lally, Nayha Pochiraju, Nicole Muller, Diana Ofori - Manu, and Sam Williams.</div>
+        </div>
+        <img id="about-artwork" src="./img/home_decorations.svg"></img>
+    </div>
 
+    <div id="vr_button_frame"></div>
+		<div id="log" style="position:absolute;top:0;left:0;color:white;height:100%;width: 100%;pointer-events: none;"></div>
+	
+		<img class="bg-paw" src="/frontEnd/image/bg_paw.png" alt="Paw background 1">
+		<img class="bg-paw" src="/frontEnd/image/bg_paw.png" alt="Paw background 2">
+		<img class="bg-paw" src="/frontEnd/image/bg_paw.png" alt="Paw background 3">
+		<img class="bg-paw" src="/frontEnd/image/bg_paw.png" alt="Paw background 4">
+		<img class="bg-paw" src="/frontEnd/image/bg_paw.png" alt="Paw background 5">
+		<img class="bg-paw" src="/frontEnd/image/bg_paw.png" alt="Paw background 6">
+		<img class="bg-paw" src="/frontEnd/image/bg_paw.png" alt="Paw background 7">
+		<img class="bg-paw" src="/frontEnd/image/bg_paw.png" alt="Paw background 8">
+		<img class="bg-paw" src="/frontEnd/image/bg_paw.png" alt="Paw background 9">
+
+    <!-- JavaScript -->
     <script src="../js/upload.js"></script>
 </body>
 </html>
